--- a/oblig 3 nettside/itproffencss.css
+++ b/oblig 3 nettside/itproffencss.css
@@ -110,6 +110,13 @@ p.sjokko {
     float: right;
     clear: right;
 }
+
+ul.sjokko {
+	color:white;
+    float: left;
+    clear: right;
+	
+}
 .footer {
     clear:both;
     bottom: 0;
