--- a/oblig 3 nettside/itproffencss.css
+++ b/oblig 3 nettside/itproffencss.css
@@ -119,7 +119,7 @@ p.sjokko1 {
 	margin-left:10em;
 	margin-right: 10em;
 }
-ul.sjokko {'
+ul.sjokko {
     text-align: center;
     color:white;
     float: left;
